--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+body{
+  background-color: rgb(56, 56, 56);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.text{
+  color: aqua;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#subButton{
+  background-color: black;
+  color: aqua;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#numOpeInput{
+  color: red;
+  
+  background-color: rgb(7, 6, 6);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.myButton {
+  margin: 20px;
+  min-width: 20px;
+  min-height: 20px;
 }
